--- a/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uss
+++ b/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uss
@@ -16,9 +16,49 @@
     border-bottom-right-radius: 5px;
     transition-duration: 0.5s, 0.5s;
     transition-property: background-color, scale;
+    margin-right: 20px;
+    -unity-font-definition: url('project://database/Assets/10.Fonts/neodgm.asset?fileID=11400000&guid=c95fb0f4ec7284646b1deb81a496bf57&type=2#neodgm');
+    -unity-font: none;
 }
 
 .btn:hover {
     background-color: rgb(46, 45, 231);
     scale: 1 1.2;
+}
+
+#PopupPanel {
+    width: 450px;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 255);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    top: -800px;
+}
+
+#PopupWindow {
+    background-color: rgba(0, 0, 0, 0.47);
+    visibility: hidden;
+    opacity: 0;
+    transition-property: opacity, visibility;
+    transition-duration: 0.4s, 0.8s;
+    transition-timing-function: ease, ease-out-bounce;
+}
+
+#PopupWindow.open {
+    visibility: visible;
+    opacity: 1;
+    transition-duration: 0.4s;
+}
+
+#PopupWindow.open > #PopupPanel {
+    top: 0;
+    transition-property: all;
+    transition-duration: 0.6s;
+    transition-timing-function: ease-out-bounce;
+}
+
+.red {
+    background-color: rgba(255, 0, 0, 255);
 }
