--- a/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uxml
+++ b/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uxml
@@ -1,4 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/11.UI/MainUI.uss?fileID=7433441132597879392&amp;guid=58e94f3539080fd4dbda50879785b3f1&amp;type=3#MainUI" />
-    <ui:Button text="버튼" display-tooltip-when-elided="true" name="BtnOpen" class="btn" />
+    <ui:Button text="버튼" display-tooltip-when-elided="true" name="BtnOpen" class="btn" style="position: absolute; top: 20px; right: 20px;" />
+    <ui:VisualElement name="PopupWindow" style="width: 100%; height: 100%; align-items: center; justify-content: center;">
+        <ui:VisualElement name="PopupPanel" style="transition-duration: 0.6s; transition-property: top; transition-timing-function: ease-out-bounce; align-items: flex-end;">
+            <ui:Button text="닫기" display-tooltip-when-elided="true" name="BtnClose" class="btn red" />
+        </ui:VisualElement>
+    </ui:VisualElement>
 </ui:UXML>
