--- a/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uxml
+++ b/Unity/1ST/BladeBot/Assets/11.UI/MainUI.uxml
@@ -1,9 +1,12 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/11.UI/MainUI.uss?fileID=7433441132597879392&amp;guid=58e94f3539080fd4dbda50879785b3f1&amp;type=3#MainUI" />
-    <ui:Button text="버튼" display-tooltip-when-elided="true" name="BtnOpen" class="btn" style="position: absolute; top: 20px; right: 20px;" />
-    <ui:VisualElement name="PopupWindow" style="width: 100%; height: 100%; align-items: center; justify-content: center;">
-        <ui:VisualElement name="PopupPanel" style="transition-duration: 0.6s; transition-property: top; transition-timing-function: ease-out-bounce; align-items: flex-end;">
-            <ui:Button text="닫기" display-tooltip-when-elided="true" name="BtnClose" class="btn red" />
+    <ui:VisualElement name="EnemyHPContainer" style="width: 100%; align-items: center;">
+        <ui:VisualElement name="HPBarRect" style="background-color: rgb(16, 47, 53);">
+            <ui:VisualElement name="Bar" style="width: 100%; height: 100%; background-color: rgb(49, 127, 146); transform-origin: left; transition-property: scale; transition-duration: 0.2s;" />
+            <ui:VisualElement name="TextContainer" style="flex-direction: row; justify-content: space-between; position: absolute; bottom: 10px; left: 10px; width: 100%; padding-right: 10px;">
+                <ui:Label text="HammerEnemy01" display-tooltip-when-elided="true" name="EnemyName" class="hp-text" />
+                <ui:Label text="100/100" display-tooltip-when-elided="true" name="HPText" class="hp-text" />
+            </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
