--- a/Unity/2ND/BTVisual/Assets/BTVisual/Editor/BTEditor.uss
+++ b/Unity/2ND/BTVisual/Assets/BTVisual/Editor/BTEditor.uss
@@ -11,6 +11,9 @@
 
 #inspector-view {
     flex-grow: 1;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .title-label {
