--- a/Unity/2ND/BTVisual/Assets/BTVisual/Editor/BTEditor.uxml
+++ b/Unity/2ND/BTVisual/Assets/BTVisual/Editor/BTEditor.uxml
@@ -2,8 +2,16 @@
     <Style src="project://database/Assets/BTVisual/Editor/BTEditor.uss?fileID=7433441132597879392&amp;guid=aac14575982f7eb4e886f64227b6f71e&amp;type=3#BTEditor" />
     <BTVisual.SplitView fixed-pane-initial-dimension="300">
         <ui:VisualElement name="left-panel" style="flex-grow: 1;">
-            <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" class="title-label" />
-            <BTVisual.InspectorView name="inspector-view" />
+            <BTVisual.SplitView orientation="Vertical" fixed-pane-initial-dimension="250">
+                <ui:VisualElement name="inspector-container" style="flex-grow: 1;">
+                    <ui:Label tabindex="-1" text="Inspector" parse-escape-sequences="true" display-tooltip-when-elided="true" class="title-label" />
+                    <BTVisual.InspectorView name="inspector-view" />
+                </ui:VisualElement>
+                <ui:VisualElement name="blackboard-container" style="flex-grow: 1;">
+                    <ui:Label tabindex="-1" text="BlackBoard" parse-escape-sequences="true" display-tooltip-when-elided="true" name="blackboard-label" class="title-label" />
+                    <ui:IMGUIContainer name="blackboard" style="flex-grow: 1;" />
+                </ui:VisualElement>
+            </BTVisual.SplitView>
         </ui:VisualElement>
         <ui:VisualElement name="right-panel" style="flex-grow: 1;">
             <ui:Label tabindex="-1" text="TreeView" parse-escape-sequences="true" display-tooltip-when-elided="true" class="title-label" />
